--- a/Pricing Panel/styles.css
+++ b/Pricing Panel/styles.css
@@ -143,7 +143,7 @@ button:focus {
 }
 
 /* MEDIA QUERIES */
-@media screen and (max-width: 900px) {
+@media (max-width: 900px) {
 .row {
     background-color: #FFFFFF;
     flex-direction: column;
